<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_margin="8dp"
        android:id="@+id/linearLayout6">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            app:srcCompat="@drawable/ic_side_menu_logo" />

        <EditText
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/search_name"
            android:textSize="@dimen/time_text"
            android:textColor="@android:color/white"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/new_profile"
            android:layout_marginTop="@dimen/general_margin"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_stat_ic_notification"
            android:layout_gravity="right"/>
    </LinearLayout>


    <ImageView
        android:id="@+id/iv_country_council"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/ic_1"
        app:layout_constraintTop_toTopOf="@+id/edit"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="42dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/ic_2"
        app:layout_constraintRight_toLeftOf="@+id/message"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_country_council"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/message"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/ic_3"
        android:layout_marginRight="42dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/edit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_council"
        android:textColor="@android:color/white"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_country_council"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/iv_country_council"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_country_council" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="@string/groups"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/message"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/message"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintHorizontal_bias="0.555" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/business_associates"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/edit"
        app:layout_constraintStart_toStartOf="@id/edit"
        tools:layout_editor_absoluteX="344dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="445dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:text="@string/department"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/select_your_category"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/bg_transparent"
        android:text="@string/next"
        android:textColor="@android:color/white"
        app:srcCompat="@color/colorPrimary"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</android.support.constraint.ConstraintLayout>
