<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_setting_page"

        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="9"
                android:gravity="center|left"
                android:paddingLeft="@dimen/general_padding"
                android:text="@string/preference_setting"
                android:textColor="@color/button_light_text" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:background="@drawable/ic_setting" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/iv_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/iv_user_nav_image"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:src="@drawable/profile_pic" />

            <TextView
                android:id="@+id/tv_change"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:layout_weight="10"
                android:gravity="center|right"
                android:paddingRight="@dimen/general_padding"
                android:text="@string/change"
                android:textColor="@color/button_light_text" />
        </LinearLayout>

        <View
            style="@style/menuItemSepatator"
            android:layout_below="@+id/iv_img"
            android:layout_marginTop="3dp" />

        <LinearLayout
            android:id="@+id/lin_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/tv_notification"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="9.5"
                android:gravity="center|left"
                android:paddingLeft="@dimen/general_padding"
                android:text="@string/notification"
                android:textColor="@color/button_light_text" />

            <com.suke.widget.SwitchButton
                android:id="@+id/switch_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right" />
        </LinearLayout>

        <View
            style="@style/menuItemSepatator"
            android:layout_below="@+id/lin_notification"
            android:layout_marginTop="3dp" />

        <LinearLayout
            android:id="@+id/lin_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/tv_change_pass"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="6"
                android:gravity="center|left"
                android:paddingLeft="@dimen/general_padding"
                android:text="@string/change_pass"
                android:textColor="@color/button_light_text" />

            <EditText
                android:id="@+id/edt_change_pass"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="4"
                android:background="@color/transparent"
                android:gravity="center|right"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/general_padding"
                android:text="@string/change_pass"
                android:textColor="@color/button_light_text" />

        </LinearLayout>

        <View
            style="@style/menuItemSepatator"
            android:layout_below="@+id/lin_change"
            android:layout_marginTop="3dp" />

        <LinearLayout
            android:id="@+id/lin_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/tv_change_new_pass"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="6"
                android:gravity="center|left"
                android:paddingLeft="@dimen/general_padding"
                android:text="@string/new_pass"
                android:textColor="@color/button_light_text" />

            <EditText
                android:id="@+id/edt_change_new_pass"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="4"
                android:background="@color/transparent"
                android:gravity="center|right"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/general_padding"
                android:textColor="@color/button_light_text" />

        </LinearLayout>

        <View
            style="@style/menuItemSepatator"
            android:layout_below="@+id/lin_new"
            android:layout_marginTop="3dp" />

        <LinearLayout
            android:id="@+id/lin_repeat_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/tv_repeat_pass"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="6"
                android:gravity="center|left"
                android:paddingLeft="@dimen/general_padding"
                android:text="@string/repeat_pass"
                android:textColor="@color/button_light_text" />

            <EditText
                android:id="@+id/edt_repeat_pass"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="4"
                android:background="@color/transparent"
                android:gravity="center|right"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/general_padding"
                android:textColor="@color/button_light_text" />

        </LinearLayout>

        <View
            style="@style/menuItemSepatator"
            android:layout_below="@+id/lin_repeat_pass"
            android:layout_marginTop="3dp" />

        <LinearLayout
            android:id="@+id/lin_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/bt_save"
                style="@style/EditTextRegisterTextStyle"
                android:layout_width="@dimen/upload_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_margin"
                android:maxLines="1"
                android:background="@color/blackGreenColor"
                android:paddingEnd="@dimen/attached_button_padding"
                android:text="@string/save"
                android:textColor="@color/button_light_text" />

            <Button
                android:id="@+id/bt_cancel"
                style="@style/EditTextRegisterTextStyle"
                android:layout_width="@dimen/upload_width"
                android:layout_margin="@dimen/general_margin"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:maxLines="1"
                android:paddingEnd="@dimen/attached_button_padding"
                android:text="@string/cancel"
                android:textColor="@color/button_light_text" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>